--- a/sandbox/mobile/.flowconfig
+++ b/sandbox/mobile/.flowconfig
@@ -6,11 +6,11 @@
 <PROJECT_ROOT>/\.buckd/
 
 ; Ignore polyfills
-node_modules/react-native/Libraries/polyfills/.*
+../../node_modules/react-native/Libraries/polyfills/.*
 
 ; These should not be required directly
 ; require from fbjs/lib instead: require('fbjs/lib/warning')
-node_modules/warning/.*
+../../node_modules/warning/.*
 
 ; Flow doesn't support platforms
 .*/Libraries/Utilities/LoadingView.js
@@ -21,8 +21,8 @@ node_modules/warning/.*
 [include]
 
 [libs]
-node_modules/react-native/interface.js
-node_modules/react-native/flow/
+../../node_modules/react-native/interface.js
+../../node_modules/react-native/flow/
 
 [options]
 emoji=true
