--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rn-cantons/layout",
-  "version": "1.0.0",
+  "version": "0.62.2001",
   "types": "dist/src/index.d.ts",
   "main": "dist/src/index.js",
   "author": "Ales Krasouski",
@@ -20,5 +20,6 @@
     "@types/react-native": "^0.62.10",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
-  }
+  },
+  "gitHead": "33bc4ad0e5221a0ead8cafbf366d6846666a1a3f"
 }
