--- a/components/bottom-sheet/package.json
+++ b/components/bottom-sheet/package.json
@@ -23,5 +23,8 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "f4b97042218ba3f79ff12ca963ff15bffbd2e78d"
 }
