--- a/components/bottom-sheet/package.json
+++ b/components/bottom-sheet/package.json
@@ -1,15 +1,35 @@
 {
   "name": "@rn-cantons/bottom-sheet",
   "version": "0.62.2003",
+  "description": "This is bottom sheet drag menu. Writed on React native, working on IOS and Android",
+  "scripts": {
+    "start": "tsc -p tsconfig.json --watch",
+    "compile": "tsc -p tsconfig.json",
+    "watch": "tsc -p tsconfig.json --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kross77/rn-cantoms"
+  },
+   "bugs": {
+    "url": "https://github.com/kross77/rn-cantoms/issues"
+  },
+  "homepage": "https://github.com/kross77/rn-cantoms",
+  "files": [
+    "dist"
+  ],
   "types": "dist/src/index.d.ts",
   "main": "dist/src/index.js",
   "author": "Ales Krasouski",
   "license": "MIT",
-  "scripts": {
-    "start": "ts-node src/index.tsx",
-    "compile": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json --watch"
-  },
+  "keywords": [
+    "react",
+    "react-native",
+    "typescript",
+    "layout",
+    "snap",
+    "bottom menu"
+  ],
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
@@ -26,5 +46,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "f4b97042218ba3f79ff12ca963ff15bffbd2e78d"
+  "gitHead": "7d4780c2551ab0ede41a61cb7288a5e7116db193"
 }
