- add firestore tools - move object link for useReducer as background

--- a/components/firestore-link/package.json
+++ b/components/firestore-link/package.json
@@ -34,6 +34,9 @@
     "react": "*",
     "react-native": "*"
   },
+  "dependencies": {
+    "@rn-cantons/react-link": "0.62.2006",
+  },
   "publishConfig": {
     "access": "public"
   },
