- fix issues in package json

--- a/components/firestore-link/package.json
+++ b/components/firestore-link/package.json
@@ -35,7 +35,7 @@
     "react-native": "*"
   },
   "dependencies": {
-    "@rn-cantons/react-link": "0.62.2006",
+    "@rn-cantons/react-link": "0.62.2006"
   },
   "publishConfig": {
     "access": "public"
