--- a/components/firestore-link/package.json
+++ b/components/firestore-link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rn-cantons/firestore-link",
-  "version": "0.62.2006",
+  "version": "0.62.2007",
   "description": "This is bottom sheet drag menu. Writed on React native, working on IOS and Android",
   "scripts": {
     "start": "tsc -p tsconfig.json --watch",
@@ -35,7 +35,7 @@
     "react-native": "*"
   },
   "dependencies": {
-    "@rn-cantons/react-link": "0.62.2006"
+    "@rn-cantons/react-link": "^0.62.2007"
   },
   "publishConfig": {
     "access": "public"
