- fix bug in BottonSheet popup

--- a/sandbox/mobile/android/app/build.gradle
+++ b/sandbox/mobile/android/app/build.gradle
@@ -79,7 +79,8 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
-    entryFile: "sandbox/mobile/index.js",
+   // entryFile: "sandbox/mobile/index.js",
+    cliPath: "../../../../node_modules/react-native/cli.js"
 ]
 
 apply from: "../../../../node_modules/react-native/react.gradle"
