--- a/components/bottom-sheet/package.json
+++ b/components/bottom-sheet/package.json
@@ -42,7 +42,8 @@
     "@kross77/react-native-layout": "^1.0.10",
     "@rn-cantons/react-link": "^0.62.2007",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.8.0"
+    "react-native-reanimated": "^1.8.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
   },
   "publishConfig": {
     "access": "public"
