--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -35,6 +35,7 @@
     "react-native": "*"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "ts-node": "^8.10.1",
     "typescript": "3.9.3"
   },
