--- a/components/firebase/tsconfig.json
+++ b/components/firebase/tsconfig.json
@@ -1,13 +1,21 @@
 {
-  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "."
+    "declaration": true,
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2015",
+    "jsx": "react",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
   "include": [
     "src"
   ],
   "exclude": [
-    "dist"
+    "dist",
+    "node_modules/*"
   ]
 }
