--- a/components/react-link/tsconfig.json
+++ b/components/react-link/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "."
+    "declaration": true,
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2015",
+    "jsx": "react",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
   "include": [
     "src"
