--- a/components/react-utils/package.json
+++ b/components/react-utils/package.json
@@ -18,8 +18,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/src/index.d.ts",
-  "main": "dist/src/index.js",
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
   "author": "Ales Krasouski",
   "license": "MIT",
   "keywords": [
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "ts-node": "^8.10.1",
-    "typescript": "3.9.3"
+    "typescript": "4.1.2"
   },
   "dependencies": {
     "@rn-cantons/layout": "^0.62.2009"
