--- a/components/bottom-sheet/tsconfig.json
+++ b/components/bottom-sheet/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "noEmit": false,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "rootDir": "."
   },
   "include": [
-    "src"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules/*"
+    "./src/*.ts",
+    "./src/*.tsx",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
   ]
 }
