- one typescript, reselect version for all packages

--- a/components/layout/tsconfig.json
+++ b/components/layout/tsconfig.json
@@ -2,10 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "allowJs": true
   },
 
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
