--- a/components/application-form/package.json
+++ b/components/application-form/package.json
@@ -36,10 +36,10 @@
   },
   "devDependencies": {
     "ts-node": "^8.10.1",
-    "typescript": "3.9.3"
+    "typescript": "4.1.2"
   },
   "dependencies": {
-    "@kross77/react-native-layout": "^1.0.10",
+    "@rn-cantons/layout": "0.62.2009",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0"
   },
