--- a/components/category-list/package.json
+++ b/components/category-list/package.json
@@ -32,17 +32,19 @@
   ],
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "styled-components": "*"
   },
   "devDependencies": {
     "ts-node": "^8.10.1",
-    "typescript": "3.9.3"
+    "typescript": "4.1.2",
+    "styled-components": "5.1.0"
   },
   "dependencies": {
     "@rn-cantons/layout": "^0.62.2009",
-    "firebase": "^7.14.2",
-    "react-firebase-hooks": "2.1.1",
-    "styled-components": "3.2.3"
+    "firebase": "8.2.7",
+    "react-firebase-hooks": "2.1.1"
+
   },
   "publishConfig": {
     "access": "public"
