--- a/components/modals/package.json
+++ b/components/modals/package.json
@@ -37,10 +37,10 @@
   "devDependencies": {
     "react-native": "0.62.2",
     "ts-node": "^8.10.1",
-    "typescript": "3.9.3"
+    "typescript": "4.1.2"
   },
   "dependencies": {
-    "@kross77/react-native-layout": "^1.0.10",
+    "@rn-cantons/layout": "^0.62.2009",
     "reselect": "^4.0.0"
   },
   "publishConfig": {
