- fix domain name (https://trello.com/c/YI6QUiTZ)

--- a/components/ts-utils/package.json
+++ b/components/ts-utils/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@rn-cantons/layout",
+  "name": "@rn-cantons/ts-utils",
   "version": "0.62.2009",
-  "description": "This is layout system",
+  "description": "This is bottom sheet drag menu. Writed on React native, working on IOS and Android",
   "scripts": {
     "start": "tsc -p tsconfig.json --watch",
     "compile": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json --watch"
+    "watch": "tsc -p tsconfig.json --watch",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -35,13 +37,13 @@
     "react-native": "*"
   },
   "devDependencies": {
-    "@rn-cantons/react-utils": "0.62.2009",
-    "@types/styled-components": "^5.1.7",
-    "ts-node": "^8.10.1",
-    "typescript": "4.1.2"
+    "typescript": "4.1.2",
+    "jest": "^26.6.3",
+    "@babel/preset-typescript": "^7.12.13"
   },
   "dependencies": {
-    "styled-components": "5.1.0"
+    "@rn-cantons/layout": "^0.62.2009",
+    "uuid": "^8.3.2"
   },
   "publishConfig": {
     "access": "public"
