--- a/features/online-clicker/functions/tsconfig.json
+++ b/features/online-clicker/functions/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": true,
     "module": "commonjs",
     "resolveJsonModule": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2015",
-    "jsx": "react",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"]
+    "target": "es2017"
   },
+  "compileOnSave": true,
   "include": [
     "src"
   ],
   "exclude": [
-    "dist",
     "node_modules/*"
   ]
 }
