--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
+    "lerna": "^3.21.0",
     "lint-staged": "10.5.1",
     "prettier": "2.2.0",
-    "typescript": "4.1.2",
-    "lerna": "^3.21.0"
+    "typescript": "4.1.2"
   },
   "husky": {
     "hooks": {
@@ -59,5 +59,9 @@
     "*.{js,jsx,ts,tsx,json,html,md,css}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4"
   }
 }
