--- a/components/category-list/package.json
+++ b/components/category-list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rn-cantons/category-list",
-  "version": "0.62.2009",
+  "version": "0.62.2011",
   "description": "This is bottom sheet drag menu. Writed on React native, working on IOS and Android",
   "scripts": {
     "start": "tsc -p tsconfig.json --watch",
@@ -36,15 +36,14 @@
     "styled-components": "*"
   },
   "devDependencies": {
+    "styled-components": "5.1.0",
     "ts-node": "^8.10.1",
-    "typescript": "4.1.2",
-    "styled-components": "5.1.0"
+    "typescript": "4.1.2"
   },
   "dependencies": {
-    "@rn-cantons/layout": "^0.62.2009",
+    "@rn-cantons/layout": "^0.62.2011",
     "firebase": "8.2.7",
     "react-firebase-hooks": "2.1.1"
-
   },
   "publishConfig": {
     "access": "public"
