--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rn-cantons/layout",
-  "version": "0.62.2012",
+  "version": "0.62.2013",
   "description": "This is layout system",
   "scripts": {
     "start": "tsc -p tsconfig.json --watch",
@@ -35,12 +35,13 @@
     "react-native": "*"
   },
   "devDependencies": {
-    "@rn-cantons/react-utils": "^0.62.2012",
+    "@rn-cantons/react-utils": "^0.62.2013",
     "@types/styled-components": "^5.1.7",
     "ts-node": "^8.10.1",
     "typescript": "4.1.2"
   },
   "dependencies": {
+    "react-share": "^4.4.0",
     "styled-components": "5.1.0"
   },
   "publishConfig": {
