Fixes: - When giving full stamps amount push message not displaying you earned a reward. It only displays x stamps added.
-For new users dynamically translations don't load automatically

- Cashier app should go to home page

- In profile edit name: In FI it is using UK.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "xcode": "yarn workspace mobile xcode"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@react-native-community/eslint-config": "2.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
