- new design implementation

--- a/components/modals/package.json
+++ b/components/modals/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@rn-cantons/layout": "^0.62.2013",
+    "react-native-modals": "^0.22.3",
     "reselect": "^4.0.0"
   },
   "publishConfig": {
