--- a/components/react-native-utils/package.json
+++ b/components/react-native-utils/package.json
@@ -18,8 +18,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/src/index.d.ts",
-  "main": "dist/src/index.js",
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
   "author": "Ales Krasouski",
   "license": "MIT",
   "keywords": [
