--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
       "components/*",
       "projects/*",
       "projects/*/functions"
+    ],
+    "nohoist": [
+      "@react-native-community/async-storage",
+      "react-native",
+      "react-native/**",
+      "react-native-dev-menu",
+      "react-native-svg",
+      "jetifier"
     ]
   },
   "scripts": {
