--- a/components/application-form/package.json
+++ b/components/application-form/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "tsc -p tsconfig.json --watch",
     "compile": "tsc -p tsconfig.json",
+    "pk-publish": "npm publish",
     "watch": "tsc -p tsconfig.json --watch"
   },
   "repository": {
