--- a/components/bottom-sheet/package.json
+++ b/components/bottom-sheet/package.json
@@ -6,7 +6,8 @@
     "start": "tsc -p tsconfig.json --watch",
     "compile": "tsc -p tsconfig.json",
     "b": "tsc -b --verbose",
-    "watch": "tsc -p tsconfig.json --watch"
+    "watch": "tsc -p tsconfig.json --watch",
+    "pk-publish": "npm publish"
   },
   "repository": {
     "type": "git",
