[react-link] remove unused dependencies [global] add examples to components repos

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "features/*/mobile-component",
       "features/*/tg-bot",
       "components/*",
+      "components/*/example",
       "projects/*",
       "projects/*/functions"
     ],
